lab1/Test/L1-A-7-90.output
Error Type A at Line 4
Error Type A at Line 12
Error Type A at Line 18
Error Type A at Line 22
