lab1/Test/L1-A-7-90.cmm
int dsUG ( struct {
  struct i aCO8E0qaTScyDz2OVCYd ;
  int UgD__28mYOCB5a ;
}zhP8BE7 , int A9RoLsrvY4EOJNFW5kWt ~) {
  float Q0Pi1pvQaAkeC [ 2110628210 ] , JLmZYhFgdeLQUbVPUaDv 
    = s && RSmj >= jOFUFlnfL49KwxfDN + k9LcWkeNi * bXB 
    [ r = qx = LsNyGHSz2FWMCKD || Sr8oyeKD9eBfy6EhbMn 
    > QBAkHGQeH_VRSV - VOa_9wYA9dpHqHC ( jj , ROPbLm4 
    <= U4VtYPRbUESzO2 / - ( wQT92OaCyh0_wb2Te3U = NnE 
    = sfVC4Lu5cCPmbf = yQJD_aVq && D_ImFwtTYqZZcsP_A != 
    I3h0uEbK ) / 1376132773.734423668 < BN2Fat_pq5rk . 
    JCQsCOtdwD ) == G8hIAGgFWJVMn ( ') / ! - 1989180815 
    . rhkDTKW2EbEyLfsEr0 ] ;
}
int ;
struct B4f_M341RkIpwCS {
};
struct g3m %;
int BA4aD , cNfsDwnG2g 

;
struct xHRBM5hWz ^;
int wCTdbmOnOm ( ) {
  if ( avQ4C6L1ssIXOzc )   if ( _jm3Vbu ) {
  }else   return VIop9E4CFwL7 ;

else   if ( YY3i )   while ( iTltcqNJ )   gFnfOnYWbsL6VzE6zwwS 
    ;



}
